--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  image_picker: ^0.8.5+3
+  firebase_auth: ^3.3.20
+  firebase_storage: ^10.2.18
+  firebase_messaging: ^11.4.2
   cloud_firestore: ^3.1.18
+  firebase_core: ^1.18.0
 
 dev_dependencies:
   flutter_test:
